<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alandy.bluetoothchat.MainActivity" >
     
    <item
        android:id="@+id/enable_visiblity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/visiblity"/>
    <item
        android:id="@+id/find_device"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/find_device"/>
    <item
        android:id="@+id/bonded_device"
        android:orderInCategory="100"
        android:title="@string/bonded_device"
        android:showAsAction="never" /> 

    <item
        android:id="@+id/listening"
        android:orderInCategory="100"
        android:title="@string/waiting"
        android:showAsAction="never" />
    <item
        android:id="@+id/stop_listening"
        android:orderInCategory="100"
        android:title="@string/stop_waiting"
        android:showAsAction="never" />

    <item
        android:id="@+id/disconnect"
        android:orderInCategory="100"
        android:title="@string/disconnect"
        android:showAsAction="never" />

</menu>